# ipt2socks-rs

./: Cargo.toml  README.md  proxy.sh
src/: cli.rs  error.rs  main.rs  server.rs  socks5.rs  tcp.rs  udp.rs  utils.rs
